test/tests/stages/1_int_constants/invalid_parse/keyword_wrong_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(RETURN)
  const int(0)
  ;
  }
